<resources>
    <string name="spinner12">Choose a province</string>
    <string name="app_name">Travel Assistant</string>
    <string name="user_name">Email or Phone number</string>
    <string name="password">Password</string>
    <string name="loginbtn">Login</string>
    <string name="registerbtn">Register</string>
    <string name="fullName">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="dob">Day of birth: YYYY-MM-DD</string>
    <string name="gender">0: Female, 1: Male</string>
    <string name="address">Address</string>
    <string name="normal_map">Normal map</string>
    <string name="hybrid_map">Hybrid map</string>
    <string name="satellite_map">Satellite map</string>
    <string name="terrain_map">Terrain map</string>
    <string name="facebook_app_id">2543069522591199</string>
    <string name="fb_login_protocol_scheme">fb2543069522591199</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="btn_forgotPass">Send OTP</string>
    <string name="title_activity_detail_stop_point">DetailStopPointActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="project_id">dulich-47e62</string>

</resources>
