<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity"
    android:background="@drawable/grad_bg"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/fab_margin">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/fab_margin"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:autoSizeTextType="none"
            app:fontFamily="sans-serif-black" />

        <EditText
            android:textColor="@color/white"
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_margin="@dimen/fab_margin"
            android:background="@drawable/et_bg"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:paddingLeft="@dimen/fab_margin"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:autofillHints=""
            android:background="@drawable/et_bg"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/fab_margin"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/et_bg"
            android:padding="@dimen/fab_margin"
            android:text="@string/loginbtn"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/fab_margin"
            android:text="or"
            android:textColor="@color/white" />





        <Button
                android:id="@+id/btnReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/registerbtn"
                android:textColor="@color/white" />
        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>