<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EditProfileActivity"
    android:background="@drawable/grad_bg">

    <LinearLayout
        android:id="@+id/linearLayoutPro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/fab_margin">

        <EditText
            android:padding="@dimen/fab_margin"
            android:id="@+id/edtFullNamePro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:background="@drawable/et_bg"
            android:ems="10"
            android:hint="@string/fullName"
            android:inputType="textPersonName"
            android:paddingLeft="@dimen/fab_margin"
            android:textColor="#000000"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <EditText
            android:padding="@dimen/fab_margin"

            android:id="@+id/edtDobPro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:background="@drawable/et_bg"
            android:ems="10"
            android:hint="@string/dob"
            android:inputType="datetime"
            android:paddingLeft="@dimen/fab_margin"
            android:textColor="#000000"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <EditText
            android:padding="@dimen/fab_margin"

            android:id="@+id/edtGenderPro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:background="@drawable/et_bg"
            android:ems="10"
            android:hint="@string/gender"
            android:inputType="numberDecimal"
            android:paddingLeft="@dimen/fab_margin"
            android:textColor="#000000"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnPro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hoàn tất"
            android:background="@drawable/btn_bg"
            android:textColor="@color/white"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
